log
Thu 14 Mar 2024 09:09:01 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:29: error: lvalue required as increment operand
   46 |   for(int i = 0 ; i < 10 ; 1++)
      |                             ^~
Compilation failed
a35de4a
Thu 14 Mar 2024 09:09:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a5369d3
Thu 14 Mar 2024 09:10:06 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
0386ec6
Thu 14 Mar 2024 09:13:48 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma += dato;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
02f9b9d
Thu 14 Mar 2024 09:15:10 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma += dato;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
d074506
Thu 14 Mar 2024 09:15:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |         suma = suma + dato;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
7bf3f70
Thu 14 Mar 2024 09:15:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:13: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |        suma += dato;
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
6611e94
Thu 14 Mar 2024 09:22:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
5aed836
Wed 20 Mar 2024 01:59:27 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: implicit declaration of function ‘pupCurrent’; did you mean ‘popCurrent’? [-Werror=implicit-function-declaration]
   88 |         pupCurrent(L);
      |         ^~~~~~~~~~
      |         popCurrent
cc1: all warnings being treated as errors
Compilation failed
987e0a9
Wed 20 Mar 2024 02:00:05 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: implicit declaration of function ‘pupCurrent’; did you mean ‘popCurrent’? [-Werror=implicit-function-declaration]
   88 |         pupCurrent(L);
      |         ^~~~~~~~~~
      |         popCurrent
exercises.c:89:17: error: dereferencing ‘void *’ pointer [-Werror]
   89 |         *dato = *(next(L));
      |                 ^~~~~~~~~~
exercises.c:89:15: error: void value not ignored as it ought to be
   89 |         *dato = *(next(L));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
2093100
Wed 20 Mar 2024 02:00:43 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: implicit declaration of function ‘pupCurrent’; did you mean ‘popCurrent’? [-Werror=implicit-function-declaration]
   88 |         pupCurrent(*dato);
      |         ^~~~~~~~~~
      |         popCurrent
cc1: all warnings being treated as errors
Compilation failed
235da95
Wed 20 Mar 2024 02:02:09 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fe6cad3
Wed 20 Mar 2024 02:05:51 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
5157eec
Wed 20 Mar 2024 02:06:12 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
40874b9
Wed 20 Mar 2024 02:08:18 AM UTC: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
5e2d832
Sat 23 Mar 2024 02:23:56 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:15: error: implicit declaration of function ‘createSrack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  103 |   Stack *P3 = createSrack();
      |               ^~~~~~~~~~~
      |               create_stack
exercises.c:103:15: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
2a89388
Sat 23 Mar 2024 02:24:12 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:15: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  103 |   Stack *P3 = createStack();
      |               ^~~~~~~~~~~
      |               create_stack
exercises.c:103:15: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
166794b
Sat 23 Mar 2024 02:24:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:15: error: implicit declaration of function ‘createstack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  103 |   Stack *P3 = createstack();
      |               ^~~~~~~~~~~
      |               create_stack
exercises.c:103:15: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
ec190bf
Sat 23 Mar 2024 02:24:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2a03703
Sat 23 Mar 2024 02:25:26 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
80c3f9b
Sat 23 Mar 2024 02:33:58 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
60eaf33
Sat 23 Mar 2024 02:34:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
58c4c61
